==> strongercjd/LVGL-GD32F207/GD32F207/LCD_disp.c <==
#include "LCD_disp.h"

void LMT028_GPIO_Config ()
{
  rcu_periph_clock_enable(RCU_EXMC);
  rcu_periph_clock_enable(RCU_GPIOC);
  rcu_periph_clock_enable(RCU_GPIOD);
  rcu_periph_clock_enable(RCU_GPIOE);
  rcu_periph_clock_enable(RCU_AF);
  
  /* 配置控制线
  * PD14  :D0
  * PD15  :D1
  * PD0   :D2
  * PD1   :D3
  * PE7   :D4
  * PE8   :D5
  * PE9   :D6
  * PE10  :D7
  */
  gpio_init(GPIOD, GPIO_MODE_AF_PP, GPIO_OSPEED_50MHZ, GPIO_PIN_0 | GPIO_PIN_1 | GPIO_PIN_14 | GPIO_PIN_15);
  gpio_init(GPIOE, GPIO_MODE_AF_PP, GPIO_OSPEED_50MHZ, GPIO_PIN_7 | GPIO_PIN_8 | GPIO_PIN_9 | GPIO_PIN_10);
  
  /* 配置控制线
  * PD4-FSMC_NOE   :LCD-RD
  * PD5-FSMC_NWE   :LCD-WR
  * PD7-FSMC_NE1   :LCD-CS
  * PD11-FSMC_A16  :LCD-DC
  */
  gpio_init(GPIOD, GPIO_MODE_AF_PP, GPIO_OSPEED_50MHZ, GPIO_PIN_4 | GPIO_PIN_5 | GPIO_PIN_7 | GPIO_PIN_11);
  
  /* 配置LCD复位RST控制用脚 PC6*/     
  gpio_init(GPIOC, GPIO_MODE_OUT_PP, GPIO_OSPEED_50MHZ, GPIO_PIN_6);
  
  
  /* 配置LCD背光BK控制用脚 PC7*/  
  gpio_init(GPIOC, GPIO_MODE_AF_PP, GPIO_OSPEED_50MHZ, GPIO_PIN_7);
//	gpio_init(GPIOC, GPIO_MODE_OUT_PP, GPIO_OSPEED_50MHZ, GPIO_PIN_7);
//  gpio_bit_set(GPIOC,GPIO_PIN_7);
  
}

void set_bk_value(uint16_t value)
{
  timer_counter_value_config(TIMER7,value);
}

void LMT028_Rst ( void )
{			
  gpio_bit_reset(GPIOC,GPIO_PIN_6);
  Delay1ms(80);				   
  	 	 
  gpio_bit_set(GPIOC,GPIO_PIN_6);
  Delay1ms(80);		
}
